fixed a bug that the newBoard div breaks the view

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -165,6 +165,7 @@ html,body,#wrapper
 #header
   position absolute
   right 0px
+  top 0
   width 400px
   background-color #aaaaaa
   padding-left "calc(%s + 10px)" %swiper-width
@@ -274,6 +275,7 @@ html,body,#wrapper
   float right
 #newBoard
   margin 0 auto
+  position absolute
   visibility hidden
 
 //animations
